Bug 36677 - Uninstall Problems with MSI on Windows 7 64bit
Summary: Uninstall Problems with MSI on Windows 7 64bit
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Installation (show other bugs)
Version:
(earliest affected)
3.4.0 Beta3
Hardware: x86-64 (AMD64) Windows (All)
: medium major
Assignee: Andras Timar
URL:
Whiteboard: target:3.4.5 target 3.5.0
Keywords:
: 35709 43454 43550 45068 45203 46111 46197 46408 46409 47008 82713 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-29 08:21 UTC by Trever L. Adams
Modified: 2014-10-03 09:55 UTC (History)
18 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Trever L. Adams 2011-04-29 08:21:10 UTC
This problem doesn't affect XP Pro, Windows Vista 64bit.

I installed OO and now LO via group policies. It installs fine. When it comes time to upgrade, I get an error in system logs if I try via GPO. It doesn't give any information. If I try to remove the application as any admin user other than Administrator (proper), it gives an error about OO or LO quick start running. As Administrator proper, it uninstalls fine. I believe this is what is causing the failure of GPO based upgrades. (I cannot say if it happens with Windows 7 32bit as all Vista and 7 that I have access to are 64bit.)

This happens OO 3.2 -> LO 3.4 beta 2.
It happens LO 3.4 beta 2 -> LO 3.4 beta 3.

I am assuming there is either a programming error or a file permissions error.

This would be good to fix so that upgrades can work and more people can adopt the program.

Thank you. Those I have installed this for love it over Word, WP (other than a few formatting problems due to lack of experience with style sheets) and OO by a long shot.
Comment 1 Andras Timar 2011-11-24 02:15:53 UTC
It must be the IsOfficeRunning Action.

http://opengrok.libreoffice.org/xref/core/setup_native/source/win32/customactions/shellextensions/checkrunningoffice.cxx

It tries to rename a directory and if it cannot, then it thinks that LibreOffice is running. However, it is never possible to rename that directory with normal user rights, and privileges are not elevated at this point.

Either a better check needed, e.g. EnumProcesses(), then GetProcessImageFileName(), then check for soffice.bin, or the privileges must be elevated before calling IsOfficeRunning Action.
Comment 2 Andras Timar 2011-11-25 01:01:47 UTC
Fixed on master, so it will be fixed in LibreOffice 3.5.0. It will also be in 3.4.5, if all goes well.
Comment 3 Andras Timar 2011-11-25 14:45:04 UTC
*** Bug 35709 has been marked as a duplicate of this bug. ***
Comment 4 Andras Timar 2011-12-05 00:14:38 UTC
*** Bug 43454 has been marked as a duplicate of this bug. ***
Comment 5 Rainer Bielefeld Retired 2011-12-06 22:04:10 UTC
*** Bug 43550 has been marked as a duplicate of this bug. ***
Comment 6 Rainer Bielefeld Retired 2011-12-06 22:06:51 UTC
Target due to info in "Bug 43454 - Break-off with message "Terminate Quick Starter""
Comment 7 Rainer Bielefeld Retired 2011-12-08 08:02:58 UTC
@Andras Timar:
This fix will also allow Update 3.4.4 -> to 3.4.5? If not, we need a hint in release notes!
Comment 8 Andras Timar 2011-12-08 08:09:20 UTC
(In reply to comment #7)
> @Andras Timar:
> This fix will also allow Update 3.4.4 -> to 3.4.5? If not, we need a hint in
> release notes!

I think it will. If you see the original bug report, this bug occured with older versions, too, but under special circumstances (silent install from GPO, etc.). Nobody complained about normal upgrade, with interactive install. Anyway, let's test it with 3.4.5 RCs.
Comment 9 Rainer Bielefeld Retired 2011-12-10 01:53:10 UTC
*** Bug 43640 has been marked as a duplicate of this bug. ***
Comment 10 Lionel Elie Mamane 2012-01-22 06:23:30 UTC
*** Bug 45068 has been marked as a duplicate of this bug. ***
Comment 11 vitriol 2012-02-15 07:27:03 UTC
*** Bug 46111 has been marked as a duplicate of this bug. ***
Comment 12 Garret Wilson 2012-02-15 07:33:10 UTC
This is happening to me in 3.3->3.5 on Windows 7 Pro 64-bit, even though this bug says that . See bug 46111.

I'm reopening, because it was claimed that it would be "fixed in LibreOffice 3.5.0" but it isn't.
Comment 13 Garret Wilson 2012-02-15 07:34:17 UTC
...or the other option is that this really isn't a duplicate of my bug 46111, and someone marked that bug as a duplicate erroneously.
Comment 14 Andras Timar 2012-02-15 08:58:17 UTC
(In reply to comment #12)

> I'm reopening, because it was claimed that it would be "fixed in LibreOffice 3.5.0" but it isn't.

Hi Garret, 
It is fixed in 3.5.0 and in 3.4.5. Of course it is not fixed in earlier versions. When you upgrade 3.3 -> 3.5 you see the bug in 3.3 (un)installer. As a workaround, you need to remove 3.3 first, then install 3.5.
Comment 15 Garret Wilson 2012-02-15 13:56:39 UTC
I see. Thanks for the clarification.

But frankly, I still think that if 3.3 uninstalls fine and you only see the problem when installing when upgrading to 3.5, then it's an issue---3.5 should do whatever it is that's needed to get 3.3 uninstalled.

Think about all the pain this is going to cause newbies---the poor people who use MS Office because "it just works". Maybe they'll do enough Google searches and checks on forums figure out how to search Bugzilla (and even open a Bugzilla account to... see how absurd this is?)... no, they just won't use it. I'm a developer---I can (sigh) manually uninstall and re-install. But Joe/Jane... Anyway, just my humble opinion. :) Back to work...
Comment 16 Andras Timar 2012-02-15 14:14:15 UTC
(In reply to comment #15)
> I see. Thanks for the clarification.
> 
> But frankly, I still think that if 3.3 uninstalls fine and you only see the problem when installing when upgrading to 3.5, then it's an issue---3.5 should do
> whatever it is that's needed to get 3.3 uninstalled.
> 

It does not work this way, sorry. 3.3 uninstalls fine in interactive mode. When you try to upgrade from 3.3 to 3.5, 3.5 installer first tries to uninstall 3.3 silently and that fails. 3.5 installer cannot remove 3.3 install directly, at least MSI technology is not designed this way, or my knowledge is insufficient. MSI is a Windows service, it is beyond our control. Installer is just a sequence of instructions that the MSI service can take.

I don't know why this bug was not discovered earlier. Maybe because it occurs under Windows 7, and people used Windows XP before. I wish we had it right from the beginning...
Comment 17 Andras Timar 2012-02-17 06:02:24 UTC
*** Bug 46197 has been marked as a duplicate of this bug. ***
Comment 18 Andras Timar 2012-02-22 05:09:58 UTC
*** Bug 46408 has been marked as a duplicate of this bug. ***
Comment 19 Urmas 2012-02-22 09:20:01 UTC
*** Bug 46409 has been marked as a duplicate of this bug. ***
Comment 20 Andras Timar 2012-02-24 03:28:47 UTC
*** Bug 46199 has been marked as a duplicate of this bug. ***
Comment 21 Alan Hadsell 2012-02-24 05:35:56 UTC
Since it's a bug in an earlier version, but manifests itself in the installation of 3.5.0, maybe with would be a good idea to prominently display a notice about the workaround in the release notes, or on the 3.5.0 download page.  

That way we'd have fewer frustrated users complaining about the issue and filing duplicate bug reports.
Comment 22 Andras Timar 2012-03-06 10:41:28 UTC
*** Bug 47008 has been marked as a duplicate of this bug. ***
Comment 23 Eric Schwarzenbach 2012-03-07 12:47:23 UTC
Could not the 3.5 installer check to see if the uninstall succeeded? And if not, tell the user about the problem and to uninstall manually?
Comment 24 Rainer Bielefeld Retired 2012-04-09 22:48:29 UTC
*** Bug 48469 has been marked as a duplicate of this bug. ***
Comment 25 Andras Timar 2012-05-16 00:33:33 UTC
*** Bug 45203 has been marked as a duplicate of this bug. ***
Comment 26 tenbob 2012-08-29 03:47:48 UTC
This bug needs to be REOPENED because it is still happening and is bound to affect a lot of users.

I tried to upgrade from v3.4.3 to v3.6.0.4 on Windows Vista and hit the same bug. The installer complained that I needed to shut down LibreOffice and the Quickstarter then terminated with the message "The Wizard was interrupted before LibreOffice could be completly installed. Your system has not been modified ...". Neither of the programs complained about was in fact running. 

Apparently the reason is that the installer has insufficient privilege to remove the earlier version of LibreOffice. But the error message is completely erroneous, giving misleading information on what is wrong. So a perfectly standard upgrade fails and the user has no way to resolve it.  

To make a acceptable fix, could the developers please try one of the following solutions.

(A) Find a way to elevate the privilege so the uninstaller works properly.

(B) Make the installer display a meaningful error message, such as "This installer cannot uninstall the earlier version of LibreOffice that is present on your system. Please uninstall this manually using the Control Panel, then run the installer again."

Thanks, tenbob
Comment 27 Rainer Bielefeld Retired 2012-08-29 04:13:25 UTC
I do not see any understandable for the reopening, tending to close the bug again. If I remember all details of the bug correctly the bug is in the uninstaller of the old (3.4.3) version, that can't e fixed, the only way a user can go to update from 3.4 to 3.5 or higher is the step over 3.4.5 (of 3.4.6).
 
@tenbob:
<https://wiki.documentfoundation.org/BugReport_Details#How_to_reopen_Bugs>
Are you sure that you discovered something new?
Comment 28 Jean-Baptiste Faure 2012-08-29 05:06:22 UTC
(In reply to comment #26)
> This bug needs to be REOPENED because it is still happening and is bound to
> affect a lot of users.
> 
> I tried to upgrade from v3.4.3 to v3.6.0.4 on Windows Vista and hit the same
> bug. 

Information is here : http://www.libreoffice.org/download/release-notes/

For LO 3.6 : For Windows users that have LibreOffice prior to version 3.4.5 installed, either uninstall that beforehand, or upgrade to 3.4.5. Otherwise, the upgrade to 3.6.0 may fail.

For LO 3.5.5 : For Windows users that have LibreOffice prior to version 3.4.5 installed, either uninstall that beforehand, or upgrade to 3.4.5. Otherwise, the upgrade to 3.5.5 may fail.

Please read release notes!

Best regards. JBF
Comment 29 Andras Timar 2012-08-29 05:16:06 UTC
See comment 14.
Comment 30 tenbob 2012-08-30 09:29:59 UTC
I agree that the original bug is in the uninstaller for versions prior to version 3.4.5. It's too late to fix this. But we can do something to improve the user experience when installing the current version. That's why I wanted to reopen it.

My reasons are.
(1) The current "fix" doesn't solve the original problem as reported.
(2) The bug affects a lot of people (Google it to check).
(3) The error message you see is wrong and doesn't help at all. It leaves users completely stuck. 
(4) I agree it's mentioned in the release notes. But who reads that in such detail?

My suggestion is the installer should check what previous version is installed and tell the user if it is unable to remove it.

Hope this helps.
Comment 31 tenbob 2012-09-05 12:47:41 UTC
Maybe nobody saw my Comment 30. To clarify, the current installer fails to complete and reports a misleading error message when it tries to uninstall v3.4.4 and earlier.

The so called "fix" does not fix this specific case. It only fixes a different case concerning removal of different versions.

That's the new information I am reporting. I have outlined a possible solution. Please could this be reopened.
Comment 32 Andras Timar 2012-09-05 13:04:57 UTC
Installer is not a program. It is a database. The actual program that operates on this database is part of Microsoft Windows. 

Your possible solution does not work.

> the installer should check what previous version is installed
It does. And installer service tries to remove the previous version by running the uninstaller of that version.

> and tell the user if it is unable to remove it.
We do not get back the control after the failure of removing the previous version. The bogus error message comes from the previous version. 

I hoped that a closed bug cannot be reoponed. I was wrong. Nevertheless, it is pointless to continue this discussion. If you have a working solution, and time to test it, your patch is warmly welcome.
Comment 33 tenbob 2012-09-05 13:35:45 UTC
Sadly I don't have the skills to write a patch. Thanks for explaining that the installer does not regain control after the uninstaller fails. So perhaps a fix is not possible.

Since the original bug has not been fixed it would be more appropriate to mark the status as WONTFIX or NOTOURBUG.
Comment 34 Andras Timar 2014-10-03 09:55:40 UTC
*** Bug 82713 has been marked as a duplicate of this bug. ***