change logic of IsOfficeRunning custom action fdo#36677

instead of trying to rename a file or folder in
Program Files directory - which is write protected
anyway normally - installer checks the process list,
if there is a process called "soffice.bin".